--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,179 @@
+alembic==1.14.1
+amqp==5.3.1
+apache-superset==4.1.1
+apispec==6.8.1
 appnope==0.1.4
+apsw==3.48.0.0
 asttokens==3.0.0
+attrs==24.3.0
+babel==2.16.0
+backoff==2.2.1
+bcrypt==4.2.1
+billiard==4.2.1
+blinker==1.9.0
+Bottleneck==1.4.2
+Brotli==1.1.0
+cachelib==0.9.0
+cachetools==5.5.1
+cattrs==24.1.2
+celery==5.4.0
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+click-didyoumean==0.3.1
+click-option-group==0.5.6
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.1
+cron-descriptor==1.4.5
+croniter==6.0.0
+cryptography==42.0.8
 cycler==0.12.1
 debugpy==1.8.12
 decorator==5.1.1
+Deprecated==1.2.15
+deprecation==2.1.0
+dnspython==2.7.0
+duckdb==1.1.3
+duckdb_engine==0.15.0
+email_validator==2.2.0
 executing==2.1.0
+Flask==2.3.3
+Flask-AppBuilder==4.5.3
+Flask-Babel==2.0.0
+Flask-Caching==2.3.0
+Flask-Compress==1.17
+Flask-JWT-Extended==4.7.1
+Flask-Limiter==3.10.1
+Flask-Login==0.6.3
+Flask-Migrate==3.1.0
+Flask-Session==0.8.0
+Flask-SQLAlchemy==2.5.1
+flask-talisman==1.1.0
+Flask-WTF==1.2.2
 fonttools==4.55.4
+func_timeout==4.3.5
+geographiclib==2.0
+geopy==2.4.1
+google-auth==2.38.0
+greenlet==3.1.1
+gunicorn==23.0.0
+h11==0.14.0
+hashids==1.3.1
+holidays==0.25
+humanize==4.11.0
+idna==3.10
+importlib_metadata==8.6.1
 ipykernel==6.29.5
 ipython==8.31.0
+isodate==0.7.2
+itsdangerous==2.2.0
 jedi==0.19.2
+Jinja2==3.1.5
+jsonpath-ng==1.7.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
+kafka-python==2.0.2
 kiwisolver==1.4.8
+kombu==5.4.2
+korean-lunar-calendar==0.3.1
+limits==4.0.1
+llvmlite==0.43.0
+Mako==1.3.8
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.0
+marshmallow-sqlalchemy==0.28.2
 matplotlib==3.10.0
 matplotlib-inline==0.1.7
+mdurl==0.1.2
+msgpack==1.0.8
+msgspec==0.19.0
 nest-asyncio==1.6.0
-numpy==2.2.2
+nh3==0.2.20
+numba==0.60.0
+numexpr==2.10.2
+numpy==1.23.5
+ordered-set==4.1.0
+outcome==1.3.0.post0
 packaging==24.2
-pandas==2.2.3
+pandas==2.0.3
+paramiko==3.5.0
+parsedatetime==2.6
 parso==0.8.4
 pexpect==4.9.0
+pgsanity==0.2.9
 pillow==11.1.0
 platformdirs==4.3.6
+ply==3.11
+polyline==2.0.2
+prison==0.2.1
 prompt_toolkit==3.0.50
 psutil==6.1.1
+psycopg2==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
 py4j==0.10.9.7
-pyarrow==19.0.0
+pyarrow==14.0.2
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
 Pygments==2.19.1
+PyJWT==2.10.1
+PyNaCl==1.5.0
+pyOpenSSL==25.0.0
 pyparsing==3.2.1
+PySocks==1.7.1
 pyspark==3.5.4
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-geohash==0.8.5
 pytz==2024.2
+PyYAML==6.0.2
 pyzmq==26.2.0
+redis==4.6.0
+referencing==0.36.1
+requests==2.32.3
+requests-cache==1.2.1
+rich==13.9.4
+rpds-py==0.22.3
+rsa==4.9
+selenium==4.9.1
+shillelagh==1.3.4
+shortid==0.1.2
+simplejson==3.19.3
 six==1.17.0
+slack_sdk==3.34.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+SQLAlchemy==1.4.54
+SQLAlchemy-Utils==0.38.3
+sqlglot==25.34.1
+sqlparse==0.5.3
+sshtunnel==0.4.0
 stack-data==0.6.3
+tabulate==0.8.10
 tornado==6.4.2
 traitlets==5.14.3
+trio==0.28.0
+trio-websocket==0.11.1
 typing_extensions==4.12.2
 tzdata==2024.2
+url-normalize==1.4.3
+urllib3==2.3.0
+vine==5.1.0
 wcwidth==0.2.13
+Werkzeug==3.1.3
+wrapt==1.17.2
+wsproto==1.2.0
+WTForms==3.2.1
+WTForms-JSON==0.3.5
+XlsxWriter==3.0.9
+zipp==3.21.0
+zstandard==0.23.0
