--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
 comm==0.2.2
+confluent-kafka==2.8.0
 contourpy==1.3.1
 cron-descriptor==1.4.5
 croniter==6.0.0
